--- a/thunk/package.json
+++ b/thunk/package.json
@@ -10,12 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.20.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
